# sales-parser

./: .gitignore  README.md  crop_image.py  database.py  gpt.py  main.py  pages_parser.py  pyproject.toml  text_parser.py  utils.py
app/: crop_image.py  database.py  gpt.py  loader.py  server.py  utils.py
app/parsers/: auchan_parser.py  base_parser.py  biedronka_parser.py  lidl_parser.py
app/pipelines/: auchan_pipeline.py  base_pipeline.py  biedronka_pipeline.py  lidl_pipeline.py
app/services/: image_processing.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CartModal.css  CartModal.jsx  CategoryDropdown.css  CategoryDropdown.jsx  ProductGrid.css  ProductGrid.jsx  SortButtons.css  SortButtons.jsx
frontend/src/hooks/: useCart.js  useProducts.js
frontend/src/pages/: Home.css  Home.jsx  Magazine.css  Magazine.jsx
