[project]
name = "sales-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "merdone",email = "maksnevino@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "selenium (>=4.41.0,<5.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "instructor (>=1.14.5,<2.0.0)",
    "fastapi>=0.133.1,<0.134.0",
    "unidecode>=1.4.0",
    "pillow>=12.1.1",
]
